--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.utente.ltmfirst">
-    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
         android:allowBackup="true"
@@ -17,7 +16,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity"/>
-
+        <activity android:name=".model.SingleItemActivity"/>
 
     </application>
 
